Viking animation only when js is enabled - corrected z-index

--- a/sass/home.scss
+++ b/sass/home.scss
@@ -26,6 +26,7 @@
         margin: auto;
         position: relative;
         top: 135px;
+        z-index: 2;
         @media screen and (max-width: $breakMobile) {
 			width:300px;
 			top: 233px;
